# psvpp

./: .gitignore  README.md  alns_main.py  coop_case.py  data_generation.py  generate_dataset.py  main.py  output.json  pyproject.toml  requirements.txt  run_benchmark_restarts.py  rust_main.py  rust_solution_visualization.py  test.xlsx  test_small1_solution.json  visualization.ipynb
rust_alns/: CONFIGURABLE_PARAMETERS.md  Cargo.toml
rust_alns/.cargo/: config.toml
rust_alns/examples/: configurable_parameters.py
rust_alns/output/: unified_engine_solution.json
rust_alns/src/: lib.rs  main.rs  python_interface.rs
rust_alns/src/alns/: acceptance.rs  context.rs  engine.rs  legacy.rs  logger.rs  mod.rs  rl_interface.rs
rust_alns/src/operators/: initial_solution.rs  mod.rs  registry.rs  traits.rs
rust_alns/src/operators/destroy/: mod.rs  random_visit_removal_in_voyages.rs  shaw_removal.rs  worst_visit_removal_in_voyages.rs
rust_alns/src/operators/improvement/: deep_relocation.rs  deep_swap.rs  fleet_and_cost_reduction.rs  mod.rs  voyage_number_reduction.rs
rust_alns/src/operators/repair/: deep_greedy_insertion.rs  mod.rs  (+1 more)
rust_alns/src/structs/: constants.rs  context.rs  csv_reader.rs  data_loader.rs  distance_manager.rs  mod.rs  modification.rs  node.rs  problem_data.rs  schedule.rs  solution.rs  time_window.rs  transaction.rs  vessel.rs  visit.rs  voyage.rs
rust_alns/src/utils/: assignment.rs  mod.rs  serialization.rs  tsp_solver.rs  utils.rs
rust_alns/tests/: deep_relocation.rs  deep_swap.rs  fleet_and_cost_reduction.rs  python_interface_smoke.py
(+143 files in other folders)
