[package]
name = "rust_alns"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_alns_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10" 
rand = "0.8"
permutohedron = "0.2.4"
serde_json = "1.0.140"
log = "0.4"
env_logger = "0.11"
pyo3 = { version = "0.20", features = ["extension-module"] }
